<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/tools">

    <string name="app_name" translatable="false">Alexandria</string>

    <!-- Shared Prefs-->
    <string name="pref_startFragment" translatable="false">pref_startFragment</string>

    <!-- Menu Items -->
    <string name="menu_books">List of Books</string>
    <string name="menu_scan">Scan/Add a Book</string>
    <string name="menu_about">About this App</string>
    <string name="menu_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="scan_button">Scan</string>
    <string name="input_hint">Insert ISBN-13. Digits only.</string>
    <string name="book_cover">Book cover</string>

    <string name="save_button">Save</string>
    <string name="delete">Delete Book</string>
    <string name="clear">Clear</string>


    <string name="search_status_ok_empty">No Books found with given ISBN number.</string>
    <string name="search_status_down">Nothing found. The server is not returning data.</string>
    <string name="search_status_invalid">Nothing found. The server is not returning valid data. Please check for an updated version of Alexandria.</string>
    <string name="search_status_unknown">Nothing found. Unknown error occurred.</string>
    <string name="search_status_no_network">No internet access.</string>

    <string name="search">Search</string>
    <string name="pref_startScreen">Select start screen</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="back_button">go back</string>
    <string name="button_ok">OK</string>
    <string name="share_text">A must read book: <xliff:g>%1$s</xliff:g></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="about_text">This application gets book information from a Google API. All titles, cover images, and author information come from there.
    The original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program. </string>
    <string name="msg_error">Error</string>
    <string name="msg_invalid_value">Invalid value</string>

    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>

    <string name="share_book_title">Share <xliff:g>%1$s</xliff:g></string>
    <string name="search_for_book">Search for book</string>
    <string name="navigation_more">More</string>
    <string name="title_description">Description:</string>
    <string name="title_categories">Categories:</string>
    <string name="title_authors">Authors:</string>
    <string name="title_dash">-</string>

    <string name="dialog_title_delete">Delete</string>
    <string name="dialog_message_delete">Remove this book?</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_dismiss">Dismiss</string>

    <string name="dialog_title_save">Save</string>
    <string name="dialog_message_save">Save this book?</string>

    <string name="error_ok_empty">No book found by that ISBN number. Check and try again.</string>
    <string name="error_server_down">Error getting book info. Server seems to be malfunctioning.</string>
    <string name="error_server_invalid">Error getting book info. Server sent invalid data.</string>
    <string name="error_server_unknown">Error getting book info. Unknown error occurred.</string>
    <string name="error_no_internet_access">No internet access</string>
    <string name="book_saved">Book <xliff:g>%1$s</xliff:g> saved.</string>
    <string name="book_deleted">Book <xliff:g>%1$s</xliff:g> deleted.</string>
    <string name="transition_book_poster">Book poster</string>
    <string name="no_books_found">No books found!</string>
    <string name="add_book">Add book</string>

    <string name="description_add_book">Add new book</string>
    <string name="description_scan_book">Scan book</string>
    <string name="description_clear_screen">Clear screen</string>
    <string name="description_save_book">Save book</string>
    <string name="description_delete_book">Delete book</string>
    <string name="loading">Loading…</string>
</resources>
