<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_library"
            android:checked="true"
            android:icon="@drawable/ic_menu_library"
            android:textStyle="bold"
            android:title="@string/menu_books" />
        <item
            android:id="@+id/navigation_item_library_add"
            android:icon="@drawable/ic_menu_library_add"
            android:title="@string/menu_scan" />
    </group>

    <item android:title="@string/navigation_more">
        <menu>
            <item
                android:id="@+id/navigation_item_about"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/navigation_item_settings"
                android:title="@string/menu_settings" />
        </menu>
    </item>
</menu>